--- a/.github/actions/precompile-orchard1-app/action.yml
+++ b/.github/actions/precompile-orchard1-app/action.yml
@@ -53,6 +53,8 @@ runs:
   steps:
     - name: Clone repository
       if: inputs.repository != ''
+      # Using the official checkout action directly, because our wrapper action doesn't have most of the parameters we
+      # need here. We only need those parameters for this action though.
       uses: actions/checkout@v3.1.0
       with:
         repository: ${{ inputs.repository }}
